dhall/tests/type-inference/failure/unit/CompletionMissingRequiredField.txt
Type error: error: annot mismatch: (Example.default ⫽ {=} : { id : Optional Natural }) : { id : Optional Natural, name : Text }
 --> <current file>:1:4
  |
...
6 | in  Example::{=}
  |     ^^^^^^^^^^^^ annot mismatch: (Example.default ⫽ {=} : { id : Optional Natural }) : { id : Optional Natural, name : Text }
  |
